@@ -139,7 +139,7 @@ sub guard {
    &down;
    # double indirection because bless works on the referenced
    # object, not (just) on the reference itself.
-   bless \\$_[0], Coro::Semaphore::guard::;
+   bless [$_[0]], Coro::Semaphore::guard::
 }
 
 #=item $guard = $sem->timed_guard ($timeout)
@@ -154,7 +154,7 @@ sub guard {
 #}
 
 sub Coro::Semaphore::guard::DESTROY {
-   &up(${${$_[0]}});
+   &up($_[0][0]);
 }
 
 =back
